REMS-Salesforce/force-app/main/default/objects/Patient__c/fields/Consent_Form_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Form Recieved</label>
    <type>Checkbox</type>
</CustomField>