REMS-Salesforce/force-app/main/default/objects/Patient__c/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Who Enrolled this Patient</description>
    <label>Prescriber</label>
    <referenceTo>Prescriber__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>