REMS-Salesforce/force-app/main/default/objects/Patient__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Social Security number</description>
    <inlineHelpText>Enter 9 Digit SSN</inlineHelpText>
    <label>SSN</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>